--- a/views/fragment/article_xiangguantuijian.html
+++ b/views/fragment/article_xiangguantuijian.html
@@ -4,7 +4,7 @@
   {% if loop.index <= 4 %}
   <li class="gw-newslist">
     <div class="gw-people">
-      <a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover;"></a>
+      <a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover;"></a>
       <span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
     </div>
     {#<p>{{item.type}}</p>#}
