--- a/views/widget/liuxue_item/yimin_item.html
+++ b/views/widget/liuxue_item/yimin_item.html
@@ -61,7 +61,7 @@
 					{% if item.uid != null %}
 					<li>
 						<div class="gw-people">
-							<a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover"></a>
+							<a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover"></a>
 							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
 						</div>
 						{#<p>{{item.type}}</p>#}
@@ -80,7 +80,7 @@
 							{% if item.uid != null %}
 							<li class="gw-newslist">
 								<div class="gw-people">
-									<a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover;"></a>
+									<a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover;"></a>
 									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
 								</div>
 								{#<p>{{item.type}}</p>#}
