--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -6,7 +6,9 @@
             </a>
             <div class="likes-item" style="padding-top:20px;">
               <span class="people-name" style="margin-top:0;margin-right:0;">{{item.user_info.realname}}</span>
+                {% if item.tag_list %}
               <span class="people-action" style="margin-top:0;float:right;">{{item.tag_list | stringSub()}}</span>
+                {% endif %}
             </div>
             <a href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
               <div class="article" style="margin-top:18px;">{{item.title | ellipsis(13) }}</div>
