--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -221,7 +221,7 @@
     var baomingfaangshi = {
       //phone
       phone: function(phone){
-        if(!/^1(3|4|5|7|8)\d{9}$/.test(phone)){
+        if(!/^1(3|4|5|6|7|8|9)\d{9}$/.test(phone)){
           return false;
         }
         return true;
