--- a/views/widget/yimin_customization1/yimin_customization1.html
+++ b/views/widget/yimin_customization1/yimin_customization1.html
@@ -94,7 +94,7 @@
   var validate_leyu = {
     //phone
     phone: function(phone){
-      if(!/^1(3|4|5|7|8)\d{9}$/.test(phone)){
+      if(!/^1(3|4|5|6|7|8|9)\d{9}$/.test(phone)){
         return false;
       }
       return true;
