--- a/views/widget/top/top_yimin.html
+++ b/views/widget/top/top_yimin.html
@@ -170,7 +170,7 @@ input[type="checkbox"] {
     <div class="l_u_con_"></div>
     <form class="m-t" role="form" style="margin-top: 20px">
       <div class="form-group inputtext_isr" style="position: relative;">
-        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确"/>
+        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone" required data-vaild="^1\d{10}$" data-errmsg="手机号不正确"/>
         <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe679;</i>
       </div>
       <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
@@ -219,7 +219,7 @@ input[type="checkbox"] {
     <div class="l_u_con_"></div>
     <form class="m-t" role="form" style="margin-top: 20px">
       <div class="form-group inputtext_isr" style="position: relative;">
-        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone_reg" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确"/>
+        <input type="text" class="form-control l_u_com_phone" placeholder="请输入手机号" id="phone_reg" required data-vaild="^1\d{10}$" data-errmsg="手机号不正确"/>
         <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe679;</i>
       </div>
       <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
