--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -100,8 +100,12 @@
         {% endfor %}
       </div>
       <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
+        {% if guwen_list.total_count > 6 %}
         <span>加载更多</span>
         <i class="iconfont">&#xe60b;</i>
+        {% else %}
+        <span>已展示全部</span>
+        {% endif %}
       </div>
       {% else %}
       {% include "widget2/blank/blank.html" %}
@@ -200,7 +204,7 @@
           if (revmsg.code == 0) {
             var revList = revmsg.data.list;
             var len = revList.length;
-            if (len == 0) {
+            if (len== 0) {
               thisObj.html('已展示全部');
             }
             if (len < per_page) {
