--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -92,8 +92,12 @@
         {% endfor %}
       </div>
       <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
+        {% if zhuanlanlist.total_count > 6 %}
         <span>加载更多</span>
         <i class="iconfont">&#xe60b;</i>
+        {% else %}
+        <span>已展示全部</span>
+        {% endif %}
       </div>
       {% else %}
       {% include "widget2/blank/blank.html" %}
