普通用户和顾问的默认头像区分

--- a/views/widget/community_advisor/community_advisor.html
+++ b/views/widget/community_advisor/community_advisor.html
@@ -151,7 +151,7 @@
 </style>
 <div class="community-advisor dui-box-shadow">
   <dl>
-    <dt class="advisor-img"><a ><img src="{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version)}}" alt=""></a></dt>
+    <dt class="advisor-img"><a ><img src="{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,userinfo.usertype)}}" alt=""></a></dt>
     <dd>
       <p class="user-name">{{ userinfo.nickname }}</p>
     </dd>
