--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -166,7 +166,7 @@
 <div class="community-advisor dui-box-shadow">
   <dl>
     <!--<dt class="advisor-img"><a target="_blank" ><img src="{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,versionflag)}}" alt=""></a></dt>-->
-    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version)}}')"><a target="_blank"></a></dt>
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,userinfo.usertype)}}')"><a target="_blank"></a></dt>
     <dd>
       <p class="user-name">{{ userinfo.nickname }}</p>
     </dd>
