--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -99,7 +99,7 @@
                       {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
                     {% endfor %}
                 </div>
-          <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
+          <div class="loadMore" data-page="1" data-page-all="{{case_data.totalpage}}" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
          {% if case_data.total_count > 6 %}
             <span>加载更多</span>
             <i class="iconfont">&#xe60b;</i>
@@ -263,6 +263,10 @@
     }
     $('.loadMore').on('click', function () {
       var page = $(this).data('page')*1+1;
+      var pageall = $(this).data('page-all');
+      if(page >pageall){
+        return false;
+      }
       var per_page = 6;
       var thisObj = $(this);
       $.ajax({
