--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -225,11 +225,17 @@
       return
     }
     if (!/^[a-zA-Z0-9]{8,16}$/.test($("#new_password").val())) {
+      $("#new_password").parent().removeClass("has-error").addClass("has-success");
+      $("#new_password").popover("destroy");
+      $("#qie_password").parent().removeClass("has-error").addClass("has-success");
+      $("#qie_password").popover("destroy");
       $('#new_password').parent().addClass("has-error").removeClass("has-success");
       $('#new_password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '新密码不正确，请输入8-16位数字或字母').popover({"trigger":"manual"}).popover("show");
       return
     }
     if (!/^[a-zA-Z0-9]{8,16}$/.test($("#qie_password").val())) {
+      $("#qie_password").parent().removeClass("has-error").addClass("has-success");
+      $("#qie_password").popover("destroy");
       $('#qie_password').parent().addClass("has-error").removeClass("has-success");
       $('#qie_password').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '确认密码不正确，请输入8-16位数字或字母').popover({"trigger":"manual"}).popover("show");
       return
