--- a/views/widget2/my_comment/my_comment.html
+++ b/views/widget2/my_comment/my_comment.html
@@ -1,5 +1,5 @@
 <div class="cmt-item clearfix">
-    <div class="cmt-img" style="background: url({{helper.avaterimg(item.uid, 'small', item.user_info.status,item.user_info.version)}})  no-repeat;background-size: cover;-webkit-border-radius: 50%;border-radius: 50%;">
+    <div class="cmt-img" style="background: url({{helper.avaterimg(item.uid, 'small', item.user_info.status,item.user_info.version,item.user_info.usertype)}})  no-repeat;background-size: cover;-webkit-border-radius: 50%;border-radius: 50%;">
         <!--<img src="{{helper.avaterimg(item.uid, 'small',item.userinfo.status,item.userinfo.version)}}" alt=""/>-->
     </div>
     <div class="cmt-info">
