--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -188,11 +188,12 @@
     $('.loadMore').on('click', function () {
       var page = $(this).data('page') * 1 + 1;
       var pageall = $(this).data('page-all');
-      if(page >pageall){
-        return false;
-      }
       var per_page = 6;
       var thisObj = $(this);
+      if(page >pageall){
+        thisObj.html('已展示全部');
+        return false;
+      }
       $.ajax({
         url: '/soapi/loadmore',
         type: 'GET',
