--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -100,11 +100,11 @@
         {% endfor %}
       </div>
       <div class="loadMore" data-page="1" data-page-all="{{guwen_list.totalpage}}" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
-        {% if guwen_list.total_count > 6 %}
-        <span>加载更多</span>
+        {% if guwen_list.totalpage == 1 %}
+        <span>已展示全部</span>
         <i class="iconfont">&#xe60b;</i>
         {% else %}
-        <span>已展示全部</span>
+        <span>加载更多</span>
         {% endif %}
       </div>
       {% else %}
@@ -188,7 +188,8 @@
     $('.loadMore').on('click', function () {
       var page = $(this).data('page') * 1 + 1;
       var pageall = $(this).data('page-all');
-      if(page >pageall){
+      var listpage =1;
+      if(pageall == 1 || pageall == listpage ){
         return false;
       }
       var per_page = 6;
@@ -208,10 +209,16 @@
           if (revmsg.code == 0) {
             var revList = revmsg.data.list;
             var len = revList.length;
+            listpage = revmsg.data.page;
             if (len== 0) {
               thisObj.html('已展示全部');
             }
-            if (len < per_page) {
+            else if (pageall == listpage) {
+              thisObj.html('已展示全部');
+              appendFav(revList);
+              thisObj.data('page', page);
+            }
+            else if (len < per_page) {
               thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
