--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -92,11 +92,11 @@
         {% endfor %}
       </div>
       <div class="loadMore" data-page="1" data-page-all="{{zhuanlanlist.totalpage}}" data-uid="{{userinfo.uid}}" style="height: 54px;line-height: 54px">
-        {% if zhuanlanlist.total_count > 6 %}
-        <span>加载更多</span>
+        {% if zhuanlanlist.totalpage == 1 %}
+        <span>已展示全部</span>
         <i class="iconfont">&#xe60b;</i>
         {% else %}
-        <span>已展示全部</span>
+        <span>加载更多</span>
         {% endif %}
       </div>
       {% else %}
@@ -255,8 +255,9 @@
     }
     $('.loadMore').on('click', function () {
       var page = $(this).data('page')*1+1;
+      var listpage = 1;
       var pageall = $(this).data('page-all');
-      if(page >pageall){
+      if(pageall == 1 || pageall == listpage ){
         return false;
       }
       var per_page = 6;
@@ -277,10 +278,16 @@
           if (revmsg.code == 0) {
             var revList = revmsg.data.list;
             var len = revList.length;
+            listpage = revmsg.data.page;
             if (len == 0) {
               thisObj.html('已展示全部');
             }
-            if (len < per_page) {
+            else if (pageall == listpage) {
+              thisObj.html('已展示全部');
+              appendFav(revList);
+              thisObj.data('page', page);
+            }
+            else if (len < per_page) {
               thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
