--- a/views/center_article.html
+++ b/views/center_article.html
@@ -132,11 +132,11 @@
                 {% endfor %}
             </div>
             <div class="loadMore" data-page="1" data-page-all="{{case_data.totalpage}}" data-uid="{% if userinfo %}{{userinfo.uid}}{%  endif %}">
-              {% if case_data.total_count > 4 %}
-              <span>加载更多</span>
+              {% if case_data.totalpage == 1 %}
+              <span>专栏加载完毕</span>
               <i class="iconfont">&#xe60b;</i>
               {% else %}
-              <span>专栏加载完毕</span>
+              <span>加载更多</span>
               {% endif %}
             </div>
             {% else %}
@@ -301,8 +301,9 @@
         }
         $('.loadMore').on('click', function () {
             var page = $(this).data('page')*1+1;
+            var listpage = 1;
             var pageall = $(this).data('page-all');
-            if(page >pageall){
+            if(pageall == 1 || pageall == listpage ){
               return false;
             }
             var uid = $(this).data('uid');
@@ -323,8 +324,14 @@
                     // console.log(revmsg)
                     if (revmsg.code == 0) {
                         var len = revmsg.data.list.length;
+                        listpage = revmsg.data.page;
                         if (len == 0) {
                             thisObj.html('专栏加载完毕')
+                        }
+                        else if (pageall == listpage) {
+                          thisObj.html('已展示全部');
+                          appendFav(revList);
+                          thisObj.data('page', page);
                         }
                         else if (0 < len && len < per_page) {
                             thisObj.html('专栏加载完毕');
