修改  顾问视角  加载

--- a/views/center_case.html
+++ b/views/center_case.html
@@ -334,7 +334,7 @@
                         }
                         else if (all == listpage) {
                             thisObj.html('案例加载完毕');
-                            appendFav(revmsg.data.list);
+                            addArticle(revmsg.data.list);
                         }
                         else if (0 < len && len < per_page) {
                             thisObj.html('案例加载完毕');
